# TBHM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
alembic/: env.py
frontend/: .gitignore  package.json  tailwind.config.js  tsconfig.json
frontend/.storybook/: main.ts  preview.ts
frontend/src/app/: globals.css
frontend/src/components/dashboard/: ScanList.tsx  TargetCard.stories.tsx  TargetCard.tsx  VulnerabilitiesTable.tsx
frontend/src/components/navigation/: Sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
src/tbhm/: __init__.py  main.py
src/tbhm/api/: deps.py
src/tbhm/core/: config.py  logging.py  subprocess_runner.py  tools.py
src/tbhm/crud/: __init__.py  crud_scan.py  crud_target.py
src/tbhm/dashboard/: __init__.py  alerts.py  chat.py  diffing.py  reports.py
src/tbhm/db/: base.py  models.py  neo4j.py  session.py
src/tbhm/exploit/: __init__.py  injection.py  waf.py
src/tbhm/recon/: __init__.py  directory.py  fingerprint.py  ip_enum.py  javascript.py  models.py  port_scan.py  screenshots.py  subdomain.py
src/tbhm/schemas/: __init__.py
src/tbhm/vuln/: __init__.py  auth.py  cmdi.py  heat_mapping.py  idor.py  remediation.py  scanner.py  sqli.py  ssrf.py
src/tbhm/workers/: __init__.py  celery_config.py  status.py  tasks.py
tests/: conftest.py
tests/unit/: test_config.py  test_models.py  test_schemas.py  test_status.py  test_subprocess_runner.py  test_tools.py
(+10 files in other folders)
